--- a/install
+++ b/install
@@ -7,8 +7,18 @@ DOTFILES_ROOT="${HOME}/.dotfiles"
 DOTFILES_REPO="git@github.com:danielmackey/dotfiles.git"
 
 if [[ ! -d ${DOTFILES_ROOT} ]]; then
+  echo "Cloning repo"
   git clone ${DOTFILES_REPO} ${DOTFILES_ROOT}
 fi
 
-cd ${DOTFILES_ROOT}
+CONFIG="install.conf.yaml"
+DOTBOT_DIR="dotbot"
 
+DOTBOT_BIN="bin/dotbot"
+BASEDIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
+
+cd "${BASEDIR}"
+
+git submodule update --init --recursive "${DOTBOT_DIR}"
+
+"${BASEDIR}/${DOTBOT_DIR}/${DOTBOT_BIN}" -d "${BASEDIR}" -c "${CONFIG}" "${@}"
