--- a/install
+++ b/install
@@ -38,7 +38,7 @@ DOTBOT_DIR="dotbot"
 DOTBOT_BIN="bin/dotbot"
 BASEDIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
 
-cd "${BASEDIR}"
+cd "${BASEDIR}/.dotfiles"
 
 git submodule update --init --recursive "${DOTBOT_DIR}"
 
